# dexios

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  flake.nix
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: audit.yml  build_nix.yml  cargo-build.yml  dexios-tests.yml  rust-clippy.yml  unit_tests.yml
dexios/: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
dexios-core/: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
dexios-core/src/: cipher.rs  header.rs  key.rs  lib.rs  primitives.rs  protected.rs  stream.rs  visual.rs
dexios-domain/: Cargo.toml  README.md
dexios-domain/src/: decrypt.rs  encrypt.rs  erase.rs  erase_dir.rs  hash.rs  hasher.rs  header.rs  key.rs  key_manipulation.rs  keys.rs  lib.rs  overwrite.rs  pack.rs  storage.rs  unpack.rs  utils.rs  wordlist.lst
dexios-domain/src/header/: dump.rs  restore.rs  strip.rs
dexios-domain/src/key/: add.rs  change.rs  delete.rs  verify.rs
dexios-domain/src/key_manipulation/: key_add.rs  key_change.rs  key_delete.rs
dexios-domain/tests/: common.rs  storage.rs
dexios-gui/: Cargo.toml  README.md
dexios-gui/src/: commands.rs  decrypt.rs  encrypt.rs  error.rs  main.rs  states.rs  utils.rs
dexios-gui/src/commands/: decrypt.rs  encrypt.rs  header.rs
dexios-gui/src/commands/header/: dump.rs  strip.rs
dexios/src/: cli.rs  cmd.rs  domain.rs  file.rs  global.rs  lib.rs  main.rs  subcommands.rs  utils.rs
dexios/src/cli/: prompt.rs
dexios/src/cmd/: decrypt.rs  encrypt.rs  erase.rs  hashing.rs  header.rs
dexios/src/cmd/header/: details.rs  dump.rs  restore.rs  strip.rs
dexios/src/domain/: decrypt.rs  encrypt.rs  erase.rs  erase_dir.rs  hash.rs  hasher.rs  mod.rs  overwrite.rs  pack.rs  storage.rs
dexios/src/global/: key.rs  parameters.rs  states.rs  structs.rs
dexios/src/old/: subcommands.rs
dexios/src/old/subcommands/: decrypt.rs  key.rs  unpack.rs
dexios/src/subcommands/: decrypt.rs  encrypt.rs  erase.rs  hashing.rs  header.rs  header_key.rs  key.rs  key_manipulation.rs  list.rs  pack.rs  prompt.rs  unpack.rs  wordlist.lst
dexios/src/ui/: prompt.rs
dexios/tests/: common.rs  storage.rs
docs/: 404.html  Checksums.html  Choosing-a-Key.html  Environment-Variables.html  Installing-and-Building.html  Introduction.html  Security-Policy.html  Supporting-Dexios.html  Usage-Examples.html  index.html  print.html  searchindex.js  searchindex.json
docs/dexios-core/: API.html  Auditing.html  Encryption.html  Headers.html  Password-Hashing.html  Protected-Wrapper.html  index.html
docs/dexios-domain/: index.html
docs/technical-details/: Auditing.html  Directory-Packing.html  Encryption.html  Headers.html  Keys.html  Password-Hashing.html  Performance-Notes.html  Secret-Wrapper.html  Secure-Erase.html  index.html
src/: cipher.rs  cli.rs  crypto.rs  decrypt.rs  directory.rs  encrypt.rs  erase.rs  file.rs  global.rs  hashing.rs  header.rs  key.rs  lib.rs  list.rs  main.rs  misc_functions.rs  pack.rs  param_handler.rs  primitives.rs  prompt.rs  protected.rs  secret.rs  stream.rs  streams.rs  structs.rs  subcommands.rs
src/crypto/: decrypt.rs  encrypt.rs  key.rs  memory.rs  primitives.rs  streams.rs
src/crypto/primitives/: cipher.rs  memory.rs  stream.rs
src/decrypt/: crypto.rs  file.rs  key.rs
src/encrypt/: crypto.rs  file.rs  hashing.rs  key.rs  password.rs
src/global/: crypto.rs  enums.rs  header.rs  parameters.rs  protected.rs  states.rs  structs.rs
src/primitives/: stream.rs
src/subcommands/: decrypt.rs  encrypt.rs  erase.rs  hashing.rs  header.rs  key.rs  list.rs  pack.rs  prompt.rs  unpack.rs
