[package]
name = "dexios-core"
description = "A library for encrypting/decrypting, password hashing, and for managing encrypted file headers that adhere to the Dexios format."
version = "1.2.0"
readme = "README.md"
authors = ["brxken128 <brxken128@tutanota.com>"]
homepage = "https://github.com/brxken128/dexios"
repository = "https://github.com/brxken128/dexios/tree/master/dexios-core"
documentation = "https://docs.rs/dexios-core/latest/dexios_core/"
categories = ["cryptography", "encoding", "data-structures"]
rust-version = "1.57"
keywords = ["encryption", "secure"]
edition = "2021"
license = "BSD-2-Clause"

# this is for sites other than crates.io, who may still use it
[badges]
maintenance = { status = "actively-developed" }

[features]
default = []
visual = ["indicatif"]

[dependencies]
# for errors, only temporary
anyhow = "1.0.65"

# AEADS
aes-gcm = "0.10.1"
chacha20poly1305 = "0.10.1"
deoxys = { version = "0.1.0" }
aead = { version = "0.5.1", features = ["stream"] }

# for wiping sensitive information from memory
zeroize = "1.5.0"

# for password hashing
argon2 = "0.4.1"
balloon-hash = "0.3.0"
blake3 = { version = "1.3.3", features = ["traits-preview"] }

# for generating random bytes
rand = "0.8.5"

indicatif = { version = "0.16.2", optional = true }