[package]
name = "dexios-domain"
description = "A library that contains the inner-workings and core logic for Dexios."
version = "1.0.1"
edition = "2021"
license = "BSD-2-Clause"
keywords = ["encryption", "secure"]
categories = ["cryptography", "encoding", "data-structures"]
repository = "https://github.com/brxken128/dexios/tree/master/dexios-domain"
homepage = "https://github.com/brxken128/dexios"
documentation = "https://docs.rs/dexios-domain/latest/dexios_domain/"
readme = "README.md"
authors = ["brxken128 <brxken128@tutanota.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# this is for sites other than crates.io, who may still use it
[badges]
maintenance = { status = "actively-developed" }

[dependencies]
core = { package = "dexios-core", path = "../dexios-core", version = "1.2.0" }

rand = "0.8.5"
blake3 = "1.3.3"
walkdir = "2.3.2"
zip = { version = "0.6.3", default-features = false, features = ["zstd"] }
