[package]
name = "dexios"
version = "8.7.0"
authors = ["brxken128 <brxken128@tutanota.com>"]
readme = "README.md"
edition = "2021"
description = "Secure, fast and authenticated command-line encryption of files with modern algorithms and an audited encryption backend."
keywords = ["encryption", "utility", "file", "command-line", "secure"]
categories = ["cryptography", "command-line-utilities"]
repository = "https://github.com/brxken128/dexios/tree/master/dexios"
homepage = "https://github.com/brxken128/dexios"
documentation = "https://brxken128.github.io/dexios"
license = "BSD-2-Clause"
rust-version = "1.60.0"

# this is for sites other than crates.io, who may still use it
[badges]
maintenance = { status = "actively-developed" }

[features]
deoxys-ii-256 = ["dexios-core/deoxys-ii-256"]

[dependencies]
blake3 = "1.3.1"
rand = "0.8.5"

domain = { package = "dexios-domain", version = "0", path = "../dexios-domain" }
dexios-core = { path = "../dexios-core", version = "1.1.1", default-features = false, features = ["visual"] }

clap = { version = "3.2.15", features = ["cargo"] }
anyhow = "1.0.57"

zip = { version = "0.6.2", default-features = false, features = ["zstd"] }
rpassword = "7.0"

[target.aarch64-linux-android]
ar = ".NDK/arm64/bin/aarch64-linux-android-ar"
linker = ".NDK/arm64/bin/aarch64-linux-android-clang"

[target.armv7-linux-androideabi]
ar = ".NDK/arm/bin/arm-linux-androideabi-ar"
linker = ".NDK/arm/bin/arm-linux-androideabi-clang"

[target.i686-linux-android]
ar = ".NDK/x86/bin/i686-linux-android-ar"
linker = ".NDK/x86/bin/i686-linux-android-clang"
